多页面多入口样式提交and threeJS 基础学习

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -19,5 +19,5 @@
 .container {
     width: 300px;
     height: 100px;
-    background: url('../assets/wujiaoxing.png');
+    background: url('../img/wujiaoxing.png');
 }
