--- a/src/css/common.css
+++ b/src/css/common.css
@@ -2,7 +2,12 @@ html,
 body {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, #abcdef, #f3f5f7);
+    /* width: 100%;
+    height: 100%; */
+}
+
+#canvasFrame {
+    border: none;
+    /* cursor: pointer; */
+    /* background-color: #EEEEEE; */
 }
